RESOLVED FIXED142053
Fix the !ENABLE(GEOLOCATION) build after r180533
https://bugs.webkit.org/show_bug.cgi?id=142053
Summary Fix the !ENABLE(GEOLOCATION) build after r180533
Csaba Osztrogonác
Reported 2015-02-26 13:12:40 PST
SSIA
Attachments
Patch (1.82 KB, patch)
2015-02-26 13:14 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-02-26 13:14:16 PST
Chris Dumez
Comment 2 2015-02-26 13:37:00 PST
Comment on attachment 247440 [details] Patch r=me, thanks.
WebKit Commit Bot
Comment 3 2015-02-26 14:23:14 PST
Comment on attachment 247440 [details] Patch Clearing flags on attachment: 247440 Committed r180700: <http://trac.webkit.org/changeset/180700>
WebKit Commit Bot
Comment 4 2015-02-26 14:23:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.