Fix the !ENABLE(GEOLOCATION) build after r180533 https://bugs.webkit.org/show_bug.cgi?id=142053

Reviewed by Chris Dumez.

* Modules/geolocation/GeoNotifier.cpp:
* Modules/geolocation/GeoNotifier.h:


Canonical link: https://commits.webkit.org/160102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180700 268f45cc-cd09-0410-ab3c-d52691b4dbfc